--- a/jenkins-pod.yaml
+++ b/jenkins-pod.yaml
@@ -12,13 +12,13 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: jenkins-pod
-  namespace: jenkins-srv
+  namespace: stark-cluster
   labels:
-    service: jenkins-srvs
+    service: jenkins-srv
 spec:
   containers:
   - name: jenkins-demo
-    image: 192.168.213.128:5000/get-python:v1
+    image: ghostgoose33/get-python:v1
     env:
     - name: SECRET_USERNAME
       valueFrom:
@@ -31,22 +31,6 @@ spec:
           name: test-secret
           key: password
 
-
----
-
-kind: Service
-apiVersion: v1
-metadata:
-  name: jenkins-service
-  namespace: jenkins-srv
-spec:
-  selector:
-    service: jenkins-srvs
-  ports:
-  - protocol: TCP
-    port: 8080
-    targetPort: 8080
-  type: LoadBalancer
 
 ---
 kind: Service
@@ -62,22 +46,6 @@ spec:
     port: 22
     targetPort: 22  
   type: LoadBalancer
-
----
-apiVersion: v1
-kind: Pod
-metadata:
-  name: registry
-  labels:
-    app: registry
-  namespace: jenkins-srv
-spec:
-  containers:
-  - name: registry
-    image: registry:2
-    imagePullPolicy: Always
-    ports:
-      - containerPort: 5000
 
 ---
 kind: Service
