--- a/E2E-Test.yaml
+++ b/E2E-Test.yaml
@@ -198,7 +198,7 @@ spec:
     spec:
       containers:
       - name: get
-        image: 100.100.100.100/get-python:v2
+        image: 100.71.71.71:5000/get-service:v2
         ports:
         - containerPort: 5003
         env:
@@ -256,7 +256,7 @@ spec:
 kind: Service
 apiVersion: v1
 metadata:
-  namespace: testing
+  namespace: production
   name: ui-service
   labels:
     app: ui
@@ -272,7 +272,7 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  namespace: testing
+  namespace: production
   name: ui-deployment
 spec:
   selector:
