--- a/E2E-Test.yaml
+++ b/E2E-Test.yaml
@@ -1,4 +1,18 @@
 ---
+
+apiVersion: v1
+kind: Secret
+metadata:
+ name:  db-secret
+ namespace: production
+data:
+  username:  ZGJhZG1pbg==
+  password:  UGFzc3dvcmQ=
+  dbname: c3Jtc3lzdGVt
+type: Opaque
+
+---
+
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
