--- a/E2E.yaml
+++ b/E2E.yaml
@@ -96,7 +96,7 @@ spec:
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  namespace: production
+  namespace: testing
   name: db-service
 spec:
   template:
@@ -153,7 +153,7 @@ spec:
 kind: Service
 apiVersion: v1
 metadata:
-  namespace: production
+  namespace: testing
   name: db-service
 spec:
   selector:
