--- a/E2E.yaml
+++ b/E2E.yaml
@@ -1,4 +1,8 @@
----
+def label = "mypod-${UUID.randomUUID().toString()}"
+def dockerRegistry = "100.71.71.71:5000"
+def Creds = "git_cred"
+
+String e2e_YAML = """---
 apiVersion: v1
 kind: Namespace
 metadata:
@@ -34,13 +38,11 @@ metadata:
     app: pvc-postgres
   name: postgres-pvc
 spec:
-  #storageClassName: slow
   accessModes:
   - ReadWriteOnce
   resources:
     requests:
       storage: 2Gi
-
 ---
 apiVersion: extensions/v1beta1
 kind: Deployment
@@ -58,7 +60,7 @@ spec:
       initContainers:
       - name: volume-mount-hack
         image: busybox
-        command: ["sh", "-c", "chown -R 999:999 /var/lib/postgresql/"]
+        command: ["sh", "-c", "chown -R 999.999 /var/lib/postgresql/"]
         volumeMounts:
         - name: postgres-pv-claim
           mountPath: /var/lib/postgresql/data
@@ -92,7 +94,6 @@ spec:
       - name: postgres-pv-claim
         persistentVolumeClaim:
           claimName: postgres-pvc
-
 ---
 kind: Service
 apiVersion: v1
@@ -107,19 +108,22 @@ spec:
     port: 5432
     targetPort: 5432
 ---
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   namespace: testing
   name: db-service
 spec:
+  selector:
+    matchLabels:
+      app: db-service
   template:
     metadata:
       labels:
         app: db-service
     spec:
       initContainers:
-      - image: 100.71.71.71:5000/init-container:latest
+      - image: 100.71.71.71:5000/init-container:${params.imageTagDB_}
         name: init-container-postgres
         env:
         - name: PGDATABASE
@@ -139,7 +143,7 @@ spec:
               key: password
         command: ['sh', '-c', '/bin/bash /tmp/check_dump.sh']
       containers:
-      - image: 100.71.71.71:5000/db-service:latest
+      - image: 100.71.71.71:5000/db-service:${params.imageTagDB_}
         name: db-service
         ports:
         - containerPort: 5002
@@ -147,7 +151,7 @@ spec:
         - name: POSTGRES_HOST
           value: srmsystemdb
         - name: POSTGRES_PORT
-          value: "5432"
+          value: '5432'
         - name: PGDATABASE
           valueFrom:
             secretKeyRef:
@@ -176,50 +180,6 @@ spec:
   - protocol: TCP
     port: 5002
     targetPort: 5002
-
-#---
-#kind: Service
-#apiVersion: v1
-#metadata:
-#  namespace: testing
-#  name: post-service
-#  labels:
-#    app: post
-#spec:
-# selector:
-#    app: post
-#  ports:
-#  - protocol: TCP
-#    port: 5001
-#    targetPort: 5001
-
-#---
-#apiVersion: apps/v1
-#kind: Deployment
-#metadata:
-#  namespace: testing
-#  name: post-deployment
-#spec:
-#  selector:
-#    matchLabels:
-#      app: post
-#  replicas: 1
-#  template:
-#    metadata:
-#      labels:
-#        app: post
-#    spec:
-#      containers:
-#      - name: post
-#        image: 100.71.71.71:5000/post-service:2.1
-#        ports:
-#        - containerPort: 5001
-#        env:
-#        - name: DB_URL
-#          valueFrom:
-#            configMapKeyRef:
-#              name: services-address
-#              key: DB_URL
 ---
 kind: Service
 apiVersion: v1
@@ -235,7 +195,6 @@ spec:
   - protocol: TCP
     port: 5000
     targetPort: 5000
-
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -254,15 +213,10 @@ spec:
     spec:
       containers:
       - name: ui
-        image: 100.71.71.71:5000/ui-service:latest
+        image: 100.71.71.71:5000/ui-service:${params.imageTagUI_}
         ports:
         - containerPort: 5000
         env:
-#        - name: POST_SERVICE_URL
-#          valueFrom:
-#            configMapKeyRef:
-#              name: services-address
-#              key: POST_SERVICE_URL
         - name: VIEW_SERVICE_URL
           valueFrom:
             configMapKeyRef:
@@ -283,7 +237,6 @@ spec:
   - protocol: TCP
     port: 5003
     targetPort: 5003
-
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -302,7 +255,7 @@ spec:
     spec:
       containers:
       - name: get
-        image: 100.71.71.71:5000/get-service:v2
+        image: 100.71.71.71:5000/get-service:${params.imageTagGET_}
         ports:
         - containerPort: 5003
         env:
@@ -312,4 +265,74 @@ spec:
               name: services-address
               key: URL_DB
 ---
+"""
 
+properties([
+    parameters([
+        stringParam(
+            defaultValue: "***", 
+            description: '', 
+            name: 'imageTagGET_'),
+	stringParam(
+            defaultValue: "***", 
+            description: '', 
+            name: 'imageTagUI_'),
+	stringParam(
+            defaultValue: "***", 
+            description: '', 
+            name: 'imageTagDB_'),
+        stringParam(
+            defaultValue: '***', 
+            description: '', 
+            name: 'namespace'),
+	stringParam(
+            defaultValue: '***', 
+            description: '', 
+            name: 'service')
+    ])
+])
+
+podTemplate(label: label, containers: [
+  containerTemplate(name: 'python-alpine', image: 'ghostgoose33/python-alp:v2', command: 'cat', ttyEnabled: true),
+  containerTemplate(name: 'docker', image: 'ghostgoose33/docker-in:v1', command: 'cat', ttyEnabled: true),
+  containerTemplate(name: 'kubectl', image: 'lachlanevenson/k8s-kubectl:v1.8.8', command: 'cat', ttyEnabled: true)
+],
+volumes: [
+  hostPathVolume(mountPath: '/var/run/docker.sock', hostPath: '/var/run/docker.sock')
+], serviceAccount: "jenkins") 
+{
+
+
+node(label)
+{
+    try{
+        
+        stage("E2E Test - Stage 1"){
+            container('kubectl'){
+            	//echo "$e2e_YAML"
+                sh """echo "$e2e_YAML" | kubectl apply -f -"""
+                sh "kubectl get pods --namespace=testing"
+            }
+        }
+        sleep 20
+        stage ("E2E Tests - Stage 2"){
+            container('python-alpine'){
+            //    sh 'echo "Here is e2e test"'
+	        sh "python3 /e2e-test-test.py"
+          }
+        }
+
+	stage ("Deploy"){
+            
+		//build(job: 'test_deploy', parameters: [[$class: 'StringParameterValue', name:"imageTagGET", value: "${params.imageTagGET}"],
+		//[$class: 'StringParameterValue', name:"imageTagUI", value: "${params.imageTagUI}"],
+		//[$class: 'StringParameterValue', name:"imageTagDB", value: "${params.imageTagDB}"],
+		//[$class: 'StringParameterValue', name:"imageTagPOST", value: "${params.imageTagPOST}"]], wait: true)
+        }
+        
+    }
+    catch(err){
+        currentBuild.result = 'Failure'
+    }
+}
+}
