Result not local

--- a/List-Helm-Charts/db-service-bg/templates/template.yaml
+++ b/List-Helm-Charts/db-service-bg/templates/template.yaml
@@ -1,9 +1,22 @@
 ---
+kind: Service
+apiVersion: v1
+metadata:
+  namespace: production
+  name: db-service-{{ .Values.deploy.version }}
+spec:
+  selector:
+    app: db-service
+  ports:
+  - protocol: TCP
+    port: 5002
+    targetPort: 5002
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   namespace: production
-  name: db-service
+  name: db-service-{{ .Values.deploy.version }}
 spec:
   selector:
     matchLabels:
