--- a/List-Helm-Charts/db-service/templates/template.yaml
+++ b/List-Helm-Charts/db-service/templates/template.yaml
@@ -74,7 +74,7 @@ kind: Service
 apiVersion: v1
 metadata:
   namespace: production
-  name: db-service
+  name: db-service-{{ .Values.deploy.version }}
 spec:
   selector:
     app: db-service
