--- a/List-Helm-Charts/get-service-bg/templates/template.yaml
+++ b/List-Helm-Charts/get-service-bg/templates/template.yaml
@@ -26,3 +26,20 @@ spec:
             configMapKeyRef:
               name: services-address
               key: URL_DB
+---
+kind: Service
+apiVersion: v1
+metadata:
+  namespace: production
+  name: get-service-{{ .Values.deploy.version }}
+  labels:
+    app: get
+spec:
+  selector:
+    app: get
+  ports:
+  - protocol: TCP
+    port: 5003
+    targetPort: 5003
+
+---
