--- a/List-Helm-Charts/e2e-testing-db/templates/template.yaml
+++ b/List-Helm-Charts/e2e-testing-db/templates/template.yaml
@@ -1,15 +1,15 @@
 ---
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  namespace: {{ .Values.namespace }}
-  name: services-address
-data:
-  POST_SERVICE_URL: post-service.testing.svc
-  VIEW_SERVICE_URL: get-service.testing.svc
-  DB_URL: db-service.testing.svc
-  URL_DB: db-service.testing.svc
----
+#apiVersion: v1
+#kind: ConfigMap
+#metadata:
+#  namespace: {{ .Values.namespace }}
+#  name: services-address
+#data:
+#  POST_SERVICE_URL: post-service.testing.svc
+#  VIEW_SERVICE_URL: get-service.testing.svc
+#  DB_URL: db-service.testing.svc
+#  URL_DB: db-service.testing.svc
+#---
 apiVersion: v1
 kind: Secret
 metadata:
