--- a/List-Helm-Charts/db-service/templates/template.yaml
+++ b/List-Helm-Charts/db-service/templates/template.yaml
@@ -3,7 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   namespace: production
-  name: db-service
+  name: db-service-{{ .Values.deploy.version }}
 spec:
   selector:
     matchLabels:
@@ -13,6 +13,8 @@ spec:
       labels:
         app: db-service
         version: {{ .Values.deploy.version }}
+      annotations:
+        sidecar.istio.io/inject: "false"
     spec:
       initContainers:
       - image: 100.71.71.71:5000/init-container:{{ .Values.image.tag }}
