--- a/List-Helm-Charts/get-service/templates/template.yaml
+++ b/List-Helm-Charts/get-service/templates/template.yaml
@@ -30,6 +30,8 @@ spec:
       labels:
         app: get
         version: {{ .Values.deploy.version }}
+      annotations:
+        sidecar.istio.io/inject: "false"
     spec:
       containers:
       - name: get
