--- a/List-Helm-Charts/ui-service/templates/template.yaml
+++ b/List-Helm-Charts/ui-service/templates/template.yaml
@@ -20,7 +20,9 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   namespace: {{ .Values.namespace }}
-  name: ui-deployment
+  name: ui-deployment-{{ .Values.deploy.version }}
+  annotations:
+        sidecar.istio.io/inject: "false"
 spec:
   selector:
     matchLabels:
