--- a/List-Helm-Charts/ui-service/templates/template.yaml
+++ b/List-Helm-Charts/ui-service/templates/template.yaml
@@ -37,7 +37,7 @@ spec:
     spec:
       containers:
       - name: {{ .Values.app.name }}
-        image: "{{ .Values.image.repository }}/{{ .Values.service.servicename }}:{{ .Values.image.tag }}"
+        image: "{{ .Values.image.repository }}/{{ .Values.image.name }}:{{ .Values.image.tag }}"
         ports:
         - containerPort: 5000
         env:
