--- a/List-Helm-Charts/ui-service/templates/template.yaml
+++ b/List-Helm-Charts/ui-service/templates/template.yaml
@@ -36,7 +36,7 @@ spec:
     spec:
       containers:
       - name: {{ .Values.app.name }}
-        image: "{{ .Values.image.repository }}/{{ .Values.image.name }}:{{ .Values.image.tag }}"
+        image: "{{ .Values.image.repository }}/ui-service:{{ .Values.image.tag }}"
         ports:
         - containerPort: 5000
         env:
