--- a/List-Helm-Charts/get-service/templates/template.yaml
+++ b/List-Helm-Charts/get-service/templates/template.yaml
@@ -41,5 +41,5 @@ spec:
         - name: URL_DB
           valueFrom:
             configMapKeyRef:
-              name: services-address
+              name: services-address-{{ .Values.conf.ver }}
               key: URL_DB
