--- a/List-Helm-Charts/ui-service/templates/template.yaml
+++ b/List-Helm-Charts/ui-service/templates/template.yaml
@@ -43,10 +43,10 @@ spec:
         - name: POST_SERVICE_URL
           valueFrom:
             configMapKeyRef:
-              name: services-address
+              name: services-address-{{ .Values.conf.ver }}
               key: POST_SERVICE_URL
         - name: VIEW_SERVICE_URL
           valueFrom:
             configMapKeyRef:
-              name: services-address
+              name: services-address-{{ .Values.conf.ver }}
               key: VIEW_SERVICE_URL
