Add POST to deploy-prod

--- a/List-Helm-Charts/post-service/values.yaml
+++ b/List-Helm-Charts/post-service/values.yaml
@@ -8,13 +8,17 @@ image:
   repository: 100.71.71.71:5000
   tag: ""
 
+conf:
+  ver: ""
+
 app:
-  name: ui
+  name: post
+  version: ""
 
 service:
   type: ClusterIP
   port: 5000
-  servicename: ui-service
+  servicename: post-service
 
 namespace: production
 
