--- a/List-Helm-Charts/post-service/templates/template.yaml
+++ b/List-Helm-Charts/post-service/templates/template.yaml
@@ -2,50 +2,43 @@
 kind: Service
 apiVersion: v1
 metadata:
-  namespace: {{ .Values.namespace }}
-  name: {{ .Values.service.servicename }}
+  namespace: production
+  name: post-service-{{ .Values.deploy.version }}
   labels:
-    app: {{ .Values.app.name }}
-    version: {{ .Values.deploy.version }}
+    app: post
 spec:
   selector:
-    app: {{ .Values.app.name }}
+    app: post
   ports:
   - protocol: TCP
-    port: 5000
-    targetPort: 5000
+    port: 5001
+    targetPort: 5001
 
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  namespace: {{ .Values.namespace }}
-  name: ui-deployment
+  namespace: production
+  name: post-deployment-{{ .Values.deploy.version }}
 spec:
   selector:
     matchLabels:
-      app: {{ .Values.app.name }}
-      version: {{ .Values.deploy.version }}
+      app: post
   replicas: 1
   template:
     metadata:
       labels:
-        app: {{ .Values.app.name }}
+        app: post
         version: {{ .Values.deploy.version }}
     spec:
       containers:
-      - name: {{ .Values.app.name }}
-        image: "{{ .Values.image.repository }}/{{ .Values.service.servicename }}:{{ .Values.image.tag }}"
+      - name: post
+        image: 100.71.71.71:5000/post-service:{{ .Values.image.tag }}
         ports:
-        - containerPort: 5000
+        - containerPort: 5001
         env:
-        - name: POST_SERVICE_URL
+        - name: DB_URL
           valueFrom:
             configMapKeyRef:
-              name: services-address
-              key: POST_SERVICE_URL
-        - name: VIEW_SERVICE_URL
-          valueFrom:
-            configMapKeyRef:
-              name: services-address
-              key: VIEW_SERVICE_URL
+              name: services-address-{{ .Values.conf.ver }}
+              key: DB_URL
