--- a/List-Helm-Charts/post-service-bg/values.yaml
+++ b/List-Helm-Charts/post-service-bg/values.yaml
@@ -4,36 +4,31 @@
 
 replicaCount: 1
 
-image:
-  repository: nginx
-  tag: stable
-  pullPolicy: IfNotPresent
+# Default values for UI-SERVICE.
+# This is a YAML-formatted file.
+# Declare variables to be passed into your templates.
 
-nameOverride: ""
-fullnameOverride: ""
+replicaCount: 1
+
+image:
+  repository: 100.71.71.71:5000
+  tag: ""
+
+app:
+  name: post
+  version: ""
 
 service:
   type: ClusterIP
-  port: 80
+  port: 5000
+  servicename: post-service
 
-ingress:
-  enabled: false
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
-  paths: []
-  hosts:
-    - chart-example.local
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
+namespace: production
+
+deploy:
+  version: ""
 
 resources: {}
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
   # limits:
   #  cpu: 100m
   #  memory: 128Mi
@@ -41,8 +36,3 @@ resources: {}
   #  cpu: 100m
   #  memory: 128Mi
 
-nodeSelector: {}
-
-tolerations: []
-
-affinity: {}
