--- a/List-Helm-Charts/ui-service-bg/templates/template.yaml
+++ b/List-Helm-Charts/ui-service-bg/templates/template.yaml
@@ -30,9 +30,8 @@ spec:
         - name: VIEW_SERVICE_URL
           valueFrom:
             configMapKeyRef:
-              name: services-address
+              name: services-address-{{ .Values.conf.ver }}
               key: VIEW_SERVICE_URL
----
 ---
 kind: Service
 apiVersion: v1
