TEST DEPLOY POST

--- a/List-Helm-Charts/e2e-testing-ui/templates/template.yaml
+++ b/List-Helm-Charts/e2e-testing-ui/templates/template.yaml
@@ -40,4 +40,9 @@ spec:
             configMapKeyRef:
               name: services-address
               key: VIEW_SERVICE_URL
+	- name: POST_SERVICE_URL
+          valueFrom:
+            configMapKeyRef:
+              name: services-address
+              key: POST_SERVICE_URL
 ---
