--- a/List-Helm-Charts/ui-service-bg/templates/template.yaml
+++ b/List-Helm-Charts/ui-service-bg/templates/template.yaml
@@ -25,7 +25,7 @@ spec:
         - name: POST_SERVICE_URL
           valueFrom:
             configMapKeyRef:
-              name: services-address
+              name: services-address-{{ .Values.conf.ver }}
               key: POST_SERVICE_URL
         - name: VIEW_SERVICE_URL
           valueFrom:
