--- a/List-Helm-Charts/get-service-bg/templates/template.yaml
+++ b/List-Helm-Charts/get-service-bg/templates/template.yaml
@@ -24,7 +24,7 @@ spec:
         - name: URL_DB
           valueFrom:
             configMapKeyRef:
-              name: services-address-{{ .Values.conf.ver }}
+              name: services-address-{{ .Values.deploy.version }}
               key: URL_DB
 ---
 kind: Service
