--- a/List-Helm-Charts/post-service-bg/templates/template.yaml
+++ b/List-Helm-Charts/post-service-bg/templates/template.yaml
@@ -40,5 +40,5 @@ spec:
         - name: DB_URL
           valueFrom:
             configMapKeyRef:
-              name: services-address-{{ .Values.conf.ver }}
+              name: services-address-{{ .Values.deploy.version }}
               key: DB_URL
