--- a/List-Helm-Charts/ui-service/templates/template.yaml
+++ b/List-Helm-Charts/ui-service/templates/template.yaml
@@ -3,7 +3,7 @@ kind: Service
 apiVersion: v1
 metadata:
   namespace: {{ .Values.namespace }}
-  name: {{ .Values.service.servicename }}
+  name: "{{ .Values.app.name }}-{{ .Values.deploy.version }}"
   labels:
     app: "{{ .Values.app.name }}-{{ .Values.deploy.version }}"
     version: {{ .Values.deploy.version }}
