--- a/Final_Magic/myjob.yaml
+++ b/Final_Magic/myjob.yaml
@@ -294,7 +294,17 @@ data:
   VIEW_SERVICE_URL: get-service-v1.production.svc
   DB_URL: db-service-v1.production.svc
   URL_DB: db-service-v1.production.svc
-
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  namespace: production
+  name: services-address
+data:
+  POST_SERVICE_URL: post-service.production.svc
+  VIEW_SERVICE_URL: get-service.production.svc
+  DB_URL: db-service.production.svc
+  URL_DB: db-service.production.svc
 ---
 apiVersion: v1
 kind: ConfigMap
@@ -743,4 +753,62 @@ data:
 
 #   restartPolicy: OnFailure
 
+---
+kind: Service
+apiVersion: v1
+metadata:
+  namespace: production
+  name: ui
+  labels:
+    app: ui
+spec:
+  selector:
+    app: ui
+  ports:
+  - protocol: TCP
+    port: 5000
+    targetPort: 5000
+---
+kind: Service
+apiVersion: v1
+metadata:
+  namespace: production
+  name: get-service
+  labels:
+    app: get
+spec:
+  selector:
+    app: get
+  ports:
+  - protocol: TCP
+    port: 5003
+    targetPort: 5003
+---
+kind: Service
+apiVersion: v1
+metadata:
+  namespace: production
+  name: post-service
+  labels:
+    app: post
+spec:
+  selector:
+    app: post
+  ports:
+  - protocol: TCP
+    port: 5001
+    targetPort: 5001
+---
+kind: Service
+apiVersion: v1
+metadata:
+  namespace: production
+  name: db-service
+spec:
+  selector:
+    app: db-service
+  ports:
+  - protocol: TCP
+    port: 5002
+    targetPort: 5002
 ---
