--- a/List-Helm-Charts/istio-rules/templates/template.yaml
+++ b/List-Helm-Charts/istio-rules/templates/template.yaml
@@ -23,6 +23,9 @@ spec:
   gateways:
   - srm-gateway
   http:
+  - match:
+    - uri:
+        prefix: "/"
     - route:
       - destination:
           host: {{ .Values.app.name }}
