--- a/List-Helm-Charts/istio-rules/values.yaml
+++ b/List-Helm-Charts/istio-rules/values.yaml
@@ -7,9 +7,14 @@ replicaCount: 1
 image:
   repository: 100.71.71.71:5000
   tag: ""
+app:
+  name: ""
 
+deploy:
+  version: ""
 
-service:
-  type: ClusterIP
-  port: 80
+weight:
+  v1: ""
+  v2: ""
 
+port: ""
