--- a/List-Helm-Charts/get-service-bg/templates/template.yaml
+++ b/List-Helm-Charts/get-service-bg/templates/template.yaml
@@ -7,16 +7,16 @@ metadata:
 spec:
   selector:
     matchLabels:
-      app: get
+      app: get-service
   replicas: 1
   template:
     metadata:
       labels:
-        app: get
+        app: get-service
         version: {{ .Values.deploy.version }}
     spec:
       containers:
-      - name: get
+      - name: get-service
         image: "{{ .Values.image.repository }}/get-service:{{ .Values.image.tag }}"
         ports:
         - containerPort: 5003
@@ -24,22 +24,5 @@ spec:
         - name: URL_DB
           valueFrom:
             configMapKeyRef:
-              name: services-address-{{ .Values.deploy.version }}
+              name: services-address
               key: URL_DB
----
-kind: Service
-apiVersion: v1
-metadata:
-  namespace: production
-  name: get-service-{{ .Values.deploy.version }}
-  labels:
-    app: get
-spec:
-  selector:
-    app: get
-  ports:
-  - protocol: TCP
-    port: 5003
-    targetPort: 5003
-
----
