--- a/List-Helm-Charts/post-service/templates/template.yaml
+++ b/List-Helm-Charts/post-service/templates/template.yaml
@@ -7,15 +7,15 @@ metadata:
 spec:
   selector:
     matchLabels:
-      app: post
+      app: post-service
   replicas: 1
   template:
     metadata:
       labels:
-        app: post
+        app: post-service
     spec:
       containers:
-      - name: post
+      - name: post-service
         image: 100.71.71.71:5000/post-service:{{ .Values.image.tag }}
         ports:
         - containerPort: 5001
