--- a/List-Helm-Charts/istio-rules/templates/template.yaml
+++ b/List-Helm-Charts/istio-rules/templates/template.yaml
@@ -23,10 +23,7 @@ spec:
   gateways:
   - srm-gateway
   http:
-  - match:
-    - uri:
-        prefix: "/"
-    route:
+    - route:
       - destination:
           host: {{ .Values.app.name }}
           subset: v1
