--- a/List-Helm-Charts/istio-rules/templates/template.yaml
+++ b/List-Helm-Charts/istio-rules/templates/template.yaml
@@ -2,7 +2,7 @@
 apiVersion: networking.istio.io/v1alpha3
 kind: DestinationRule
 metadata:
-  name: {{ .Values.app.name }}
+  name: {{ .Values.app.name }}-{{ .Values.vers }}
 spec:
   host: {{ .Values.app.name }}
   subsets:
@@ -16,7 +16,7 @@ spec:
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: {{ .Values.app.name }}
+  name: {{ .Values.app.name }}-{{ .Values.vers }}
 spec:
   hosts:
   - "*"
